Backported compiler updates from plexil-x; cleaned up compiler optimization of trivially collapsible blocks
git-svn-id: https://svn.code.sf.net/p/plexil/code/branches/plexil-4@5264 d2be67b0-814c-0410-949f-d215b6b29573