@@ -1,4 +1,4 @@
-// Copyright (c) 2006-2015, Universities Space Research Association (USRA).
+// Copyright (c) 2006-2020, Universities Space Research Association (USRA).
 //  All rights reserved.
 //
 // Redistribution and use in source and binary forms, with or without
@@ -36,14 +36,17 @@ import net.n3.nanoxml.*;
 public class BlockNode extends PlexilTreeNode
 {
     // Name binding context
-    NodeContext m_context = null;
+    private NodeContext m_context = null;
 
     // Components of the block
-    PlexilTreeNode m_comment = null;
-    Vector<PlexilTreeNode> m_conditions = null;
-    Vector<PlexilTreeNode> m_attributes = null;
-    Vector<PlexilTreeNode> m_resources = null;
-    Vector<PlexilTreeNode> m_body = null;
+    private PlexilTreeNode m_comment = null;
+    private PlexilTreeNode m_priority = null;
+    private Vector<PlexilTreeNode> m_conditions = null;
+    private Vector<PlexilTreeNode> m_resources = null;
+    private Vector<PlexilTreeNode> m_body = null;
+    private Vector<VariableName> m_localVars = null;
+    private Vector<InterfaceVariableName> m_inVars = null;
+    private Vector<InterfaceVariableName> m_inOutVars = null;
 
     public BlockNode(Token t)
     {
@@ -54,8 +57,8 @@ public class BlockNode extends PlexilTreeNode
     {
         super(n);
 		m_comment = n.m_comment;
+		m_priority = n.m_priority;
 		m_conditions = n.m_conditions;
-		m_attributes = n.m_attributes;
 		m_resources = n.m_resources;
 		m_body = n.m_body;
     }
@@ -101,7 +104,7 @@ public class BlockNode extends PlexilTreeNode
         m_context = new NodeContext(parentContext, nodeId);
 
         // Divide up the children by category
-        partitionChildren();
+        partitionChildren(state);
     }
 
     /**
@@ -113,6 +116,8 @@ public class BlockNode extends PlexilTreeNode
     {
         checkChildren(m_context, state);
         checkSelf(parentContext, state);
+        // Partition variable declarations from the context
+        m_context.getNodeVariables(m_localVars, m_inVars, m_inOutVars);
     }
 
     // N.B. Interface and variable decl's, and conditions, check themselves.
@@ -121,10 +126,12 @@ public class BlockNode extends PlexilTreeNode
         // Check for duplicate conditions
         TreeSet<Integer> conditionsSeen = new TreeSet<Integer>();
         for (PlexilTreeNode c : m_conditions) {
-            Integer condType = new Integer(c.getType());
+            Integer condType = Integer.valueOf(c.getType());
             if (conditionsSeen.contains(condType)) {
                 state.addDiagnostic(c,
-                                    "Multiple \"" + c.getToken().getText() + "\" conditions specified",
+                                    "In node " + m_context.getNodeName()
+                                    + ": Multiple \"" + c.getToken().getText()
+                                    + "\" conditions specified",
                                     Severity.ERROR);
             }
             else {
@@ -139,23 +146,25 @@ public class BlockNode extends PlexilTreeNode
             // Resources are NOT legal, flag them as errors
             for (PlexilTreeNode r : m_resources) {
                 state.addDiagnostic(r, 
-                                    "The \"" + r.getToken().getText() + "\" keyword is only valid for Command actions",
+                                    "In node " + m_context.getNodeName()
+                                    + "The \"" + r.getToken().getText()
+                                    + "\" keyword is only valid for Command actions",
                                     Severity.ERROR);
             }
         }
-
-        // TODO: Check attributes
-        for (PlexilTreeNode a : m_attributes) {
-            // Check for collisions
-        }
+        // Priority is self-checking
     }
 
-    private void partitionChildren()
+    private void partitionChildren(CompilerState state)
     {
         m_conditions = new Vector<PlexilTreeNode>();
-        m_attributes = new Vector<PlexilTreeNode>();
         m_resources = new Vector<PlexilTreeNode>();
         m_body = new Vector<PlexilTreeNode>();
+        m_localVars = new Vector<VariableName>();
+        m_inVars = new Vector<InterfaceVariableName>();
+        m_inOutVars = new Vector<InterfaceVariableName>();
+
+        boolean varDeclSeen = false;
 
         if (this.getChildCount() > 0) {
             int i = 0;
@@ -169,7 +178,7 @@ public class BlockNode extends PlexilTreeNode
                 case PlexilLexer.IN_KYWD:
                 case PlexilLexer.IN_OUT_KYWD:
                 case PlexilLexer.VARIABLE_DECLARATIONS:
-                    // declarations take care of themselves
+                    // declarations add selves to current context
                     break;
 
                 case PlexilLexer.END_CONDITION_KYWD:
@@ -188,154 +197,181 @@ public class BlockNode extends PlexilTreeNode
                     break;
 
                 case PlexilLexer.PRIORITY_KYWD:
-                    m_attributes.add(child);
+                    if (m_priority != null) {
+                        state.addDiagnostic(child, 
+                                            "In node " + m_context.getNodeName()
+                                            + " Multiple Priority attributes",
+                                            Severity.ERROR);
+                    } else {
+                        m_priority = child;
+                    }
+                    break;
+
+                case PlexilLexer.ACTION:
+                    m_body.add(child);
                     break;
 
                 default:
-                    m_body.add(child);
+                    // should never happen (?)
+                    state.addDiagnostic(this,
+                                        "Internal error: Unexpected child "
+                                        + child.getToken().getText()
+                                        + " in block",
+                                        Severity.FATAL);
                     break;
                 }
             }
         }
     }
 
-
-    // N.B. Could add more cases to inherit XML from child.
     protected void constructXML()
     {
-        // Construct basic XML
-        // If body is 1 simple action, use its XML as a base
-        if (isSimpleNode()) {
-            // System.out.println("BlockNode.constructXML collapsing:");
-            // System.out.println(this.toStringTree());
-            // System.out.println(" to:");
-            // System.out.println(m_body.firstElement().getChild(0).toStringTree());
-            m_xml = m_body.firstElement().getChild(0).getXML();
+        // Place children in canonical order
+        int insertIdx = 0;
+
+        // Build basic node
+        if (m_body.isEmpty()) {
+            // Empty node
+            m_xml = new XMLElement("Node");
+            m_xml.setAttribute("NodeType", "Empty");
+            this.addSourceLocatorAttributes();
+        }
+        else if (isSimpleNode()) {
+            // Get base XML from child
+            PlexilTreeNode action = m_body.firstElement();
+            if (firstChildHasNodeId()) {
+                m_xml = action.getXML();  // get it with NodeId
+                insertIdx++;              // insert everything after NodeId
+            }
+            else
+                m_xml = action.getChild(0).getXML(); // get bare node
         }
         else {
-            // Build XML wrapper
-            if (m_body.isEmpty()) {
-                // Empty node
-                m_xml = new XMLElement("Node");
-                m_xml.setAttribute("NodeType", "Empty");
-            }
-            else {
-                if (this.getType() == PlexilLexer.BLOCK) {
-                    m_xml = new XMLElement("Sequence");
-                }
-                else {
-                    m_xml = new XMLElement(this.getToken().getText());
-                }
-            }
+            // 1 or more items in body
+            if (this.getType() == PlexilLexer.LBRACE)
+                m_xml = new XMLElement("Sequence");
+            else
+                m_xml = new XMLElement(this.getToken().getText());
             this.addSourceLocatorAttributes();
+            // Add children from body
+            for (PlexilTreeNode n : m_body)
+                m_xml.addChild(n.getXML());
         }
 
         // Add comment
         if (m_comment != null) {
             IXMLElement comment = m_comment.getChild(0).getXML();
             comment.setName("Comment");
-            m_xml.addChild(comment);
+            m_xml.insertChild(comment, insertIdx++);
         }
 
-        Vector<VariableName> localVars = new Vector<VariableName>();
-        Vector<InterfaceVariableName> inVars = new Vector<InterfaceVariableName>();
-        Vector<InterfaceVariableName> inOutVars = new Vector<InterfaceVariableName>();
-        m_context.getNodeVariables(localVars, inVars, inOutVars);
-        if (!inVars.isEmpty() || !inOutVars.isEmpty()) {
+        if (!m_inVars.isEmpty() || !m_inOutVars.isEmpty()) {
             IXMLElement intfc = new XMLElement("Interface");
-            m_xml.addChild(intfc);
-            if (!inVars.isEmpty()) {
+            m_xml.insertChild(intfc, insertIdx++);
+            if (!m_inVars.isEmpty()) {
                 IXMLElement inXML = new XMLElement("In");
                 intfc.addChild(inXML);
-                for (InterfaceVariableName iv : inVars)
+                for (InterfaceVariableName iv : m_inVars)
                     inXML.addChild(iv.makeDeclarationXML());
             }
-            if (!inOutVars.isEmpty()) {
+            if (!m_inOutVars.isEmpty()) {
                 IXMLElement inOutXML = new XMLElement("InOut");
                 intfc.addChild(inOutXML);
-                for (InterfaceVariableName iov : inOutVars)
+                for (InterfaceVariableName iov : m_inOutVars)
                     inOutXML.addChild(iov.makeDeclarationXML());
             }
         }
-        if (!localVars.isEmpty()) {
+        if (!m_localVars.isEmpty()) {
             IXMLElement decls = new XMLElement("VariableDeclarations");
-            m_xml.addChild(decls);
-            for (VariableName v : localVars) {
+            m_xml.insertChild(decls, insertIdx++);
+            for (VariableName v : m_localVars)
                 decls.addChild(v.makeDeclarationXML());
-            }
         }
 
         // Add conditions
-        for (PlexilTreeNode n : m_conditions) {
-            m_xml.addChild(n.getXML());
-        }
+        for (PlexilTreeNode n : m_conditions)
+            m_xml.insertChild(n.getXML(), insertIdx++);
 
-        // Add attributes
-        for (PlexilTreeNode n : m_attributes) {
-            m_xml.addChild(n.getXML());
-        }
+        // Add priority
+        if (m_priority != null)
+            m_xml.insertChild(m_priority.getXML(), insertIdx++);
 
-
-        if (isSimpleNode()) {
-            // All above have been added after original body,
-            // so move body to last place
-            IXMLElement bodyXML = m_xml.getChildAtIndex(0);
-            m_xml.removeChildAtIndex(0);
-
-			// Add command resources, if required
-			if (isCommandNode()) {
-				if (!m_resources.isEmpty()) {
-					IXMLElement rlist = new XMLElement("ResourceList");
-					for (PlexilTreeNode n : m_resources)
-						rlist.addChild(n.getXML());
-					XMLElement commandXml = (XMLElement) bodyXML.getChildAtIndex(0);
-					commandXml.insertChild(rlist, 0);
-				}
-			}
-
-            m_xml.addChild(bodyXML);
-        }
-        else {
-            // Add children from body
-            for (PlexilTreeNode n : m_body) {
-                m_xml.addChild(n.getXML());
+        if (!m_resources.isEmpty()) {
+            if (isCommandNode()) {
+                // Add command resources, if required
+                // Has to be done here because CommandNode represents the naked command
+                // and resources are in the surrounding braces
+                IXMLElement rlist = new XMLElement("ResourceList");
+                for (PlexilTreeNode n : m_resources)
+                    rlist.addChild(n.getXML());
+                XMLElement commandXml =
+                    (XMLElement) m_xml.getFirstChildNamed("NodeBody").getFirstChildNamed("Command");
+                commandXml.insertChild(rlist, 0);
+            } else {
+                // TODO: generate warning
             }
         }
+
+        // TEMP DEBUG
+        // System.out.println("\nBlockNode.constructXML for " + this.toStringTree());
+        // try {
+        //     new XMLWriter(System.out).write(m_xml, true);
+        // } catch (java.io.IOException e) {
+        //     System.out.println("XML printing error");
+        // }
+    }
+
+    private boolean firstChildHasNodeId()
+    {
+        if (m_body.isEmpty())
+            return false;
+        return 1 < m_body.firstElement().getChildCount();
+    }
+
+    private boolean hasOuterNodeId()
+    {
+        PlexilTreeNode parent = this.getParent();
+        return parent != null
+            && parent instanceof ActionNode
+            && parent.getChildCount() > 1;
     }
 
     private boolean isSimpleNode()
     {
+        // Don't collapse these block types because outcome semantics change
+        if (this.getType() == PlexilLexer.UNCHECKED_SEQUENCE_KYWD
+            || this.getType() == PlexilLexer.CONCURRENCE_KYWD)
+            return false;
+
         if (m_body.size() != 1)
             return false;
 
-        PlexilTreeNode child = m_body.firstElement();
-        if (child.getChildCount() != 1)
-            return false;
+        PlexilTreeNode action = m_body.firstElement(); // (Action NCNAME? *)
+        int childCt = action.getChildCount();
+        if (hasOuterNodeId() && childCt > 1)
+            return false; // both parent & child have node IDs
 
-        ActionNode action = (ActionNode) child;
-        // this should never fail, in theory
-        if (action == null)
-            return false;
-        if (action.hasNodeId())
-            return false; // separate node ID on child
-
-        int bodyType = action.getChild(0).getType();
-        switch (bodyType) {
+        PlexilTreeNode subaction = action.getChild(childCt - 1);
+        switch (subaction.getType()) {
+            // Primitives
         case PlexilLexer.ASSIGNMENT:
         case PlexilLexer.COMMAND:
-        case PlexilLexer.LIBRARY_CALL_KYWD:
         case PlexilLexer.UPDATE_KYWD:
-        case PlexilLexer.REQUEST_KYWD:
+        case PlexilLexer.LIBRARY_CALL_KYWD:
+            return true;
+
+            // Compound
+        case PlexilLexer.IF_KYWD:
+        case PlexilLexer.FOR_KYWD:
+        case PlexilLexer.WHILE_KYWD:
+        case PlexilLexer.ON_COMMAND_KYWD:
+        case PlexilLexer.ON_MESSAGE_KYWD:
+        case PlexilLexer.SYNCHRONOUS_COMMAND_KYWD:
             return true;
 
         default:
             return false;
         }
-    }
-
-    private boolean isListNode()
-    {
-        return m_body.size() > 1;
     }
 
     private boolean isCommandNode()
@@ -348,10 +384,7 @@ public class BlockNode extends PlexilTreeNode
         if (action.getType() != PlexilLexer.ACTION) {
             return false;
         }
-        if (action.getChildCount() != 1) {
-            return false;
-        }
-        return action.getChild(0).getType() == PlexilLexer.COMMAND;
+        return action.getChild(action.getChildCount() - 1).getType() == PlexilLexer.COMMAND;
     }
 
 }
